lowered the android version requirement from 5.0 to 4.1.2 added the map into the app sorry for tha big increase in size but I don't have a server powerful enough to send all those images to people, images borrowed for warframe hub till I can make my own smaller images hopefully a fix for 'invalid argument(s)' in the cetus/earth cycle

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/acolytes/
+    - assets/plains/
     - assets/hotfix.jpg
 
   fonts:
