--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,25 +5,24 @@ dependencies:
   flutter:
     sdk: flutter
   intl: ^0.15.7
-  share: ^0.5.3
   flutter_youtube: ^1.1.1
   codable: ^1.0.0
-  scoped_model: ^0.3.0
-  shared_preferences: ^0.4.2
+  rxdart: ^0.18.1
+  shared_preferences: ^0.4.3
   flutter_custom_tabs: ^0.4.0
   flutter_map: ^0.1.3
-  sentry: ^2.1.0
+  sentry: ^2.1.1
   chewie: ^0.7.0
-  firebase_messaging: ^1.0.5
-  flutter_local_notifications: ^0.3.7
-  flutter_circular_chart: ^0.1.0
   cached_network_image: ^0.4.2
-  flutter_offline: ^0.2.0
-  package_info: ^0.3.2
+  android_job_scheduler:
+    path: android_job_scheduler/
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+dependency_overrides:
+  http: ^0.12.0
 
 flutter:
   uses-material-design: true
