too many things can't remember moved the bounty timer to the top added tactical alerts and ghoul purge should in term add plague star dynamically recoded the reward pool image api and borrowed some images from Warframe official app added a light theme placeholder for nintendo switch small changes to the UI here and there

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   sentry: ^2.1.1
   chewie: ^0.7.0
   cached_network_image: ^0.4.2
+  timeago: ^2.0.8
   android_job_scheduler:
     path: android_job_scheduler/
 
