--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependency_overrides:
 flutter:
   uses-material-design: true
   assets:
+    - assets/jsons/
     - assets/acolytes/
     - assets/hotfix.jpg
     - assets/plains/0/0/
