--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,12 +5,13 @@ dependencies:
   flutter:
     sdk: flutter
   intl: ^0.15.7
-  flutter_youtube: ^1.1.3
+  flutter_youtube: ^1.1.4
   codable: ^1.0.0
   rxdart: ^0.19.0
   shared_preferences: ^0.4.3
   flutter_custom_tabs: ^0.4.0
   flutter_map: ^0.2.0
+  flutter_svg: ^0.6.3
   sentry: ^2.1.1
   chewie: ^0.8.0
   cached_network_image: ^0.5.0
@@ -26,6 +27,7 @@ dependency_overrides:
 flutter:
   uses-material-design: true
   assets:
+    - assets/sigils/
     - assets/acolytes/
     - assets/hotfix.jpg
     - assets/plains/0/0/
