--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,15 +14,13 @@ dependencies:
   flutter_svg: ^0.6.3
   sentry: ^2.1.1
   chewie: ^0.8.0
-  cached_network_image: ^0.5.0
+  cached_network_image: ^0.5.0+1
   timeago: ^2.0.8
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-dependency_overrides:
-  http: ^0.12.0
 
 flutter:
   uses-material-design: true
