--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.cephalon.navis">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -6,6 +7,7 @@
     <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
+        tools:replace="android:label"
         android:name="io.flutter.app.FlutterApplication"
         android:icon="@mipmap/ic_launcher"
         android:label="Navis">
