--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,15 +7,15 @@ dependencies:
   intl: ^0.15.7
   flutter_youtube: ^1.1.4
   codable: ^1.0.0
-  rxdart: ^0.19.0
+  rxdart: ^0.20.0
   shared_preferences: ^0.4.3
   flutter_custom_tabs: ^0.4.0
   flutter_sequence_animation: ^3.0.1
-  flutter_map: ^0.2.0
-  flutter_svg: ^0.7.0
-  sentry: ^2.1.1
+  flutter_map: ^0.4.0
+  flutter_svg: ^0.7.0+1
+  sentry: ^2.2.0
   chewie: ^0.8.0
-  cached_network_image: ^0.5.0+1
+  cached_network_image: ^0.5.1
   package_info: ^0.3.2
   device_info: ^0.3.0
   background_fetch: ^0.1.1
@@ -36,12 +36,12 @@ flutter:
     - assets/relics/
 
     #Plains of Eidolon map tiles
-    - assets/plains/0/
-    - assets/plains/1/
-    - assets/plains/2/
+    #- assets/plains/0/
+    #- assets/plains/1/
+    #- assets/plains/2/
 
     #Orb Vallis Map tiles
-    - assets/vallis/1/
-    - assets/vallis/2/
-    - assets/vallis/3/
-    - assets/vallis/4/
+    #- assets/vallis/1/
+    #- assets/vallis/2/
+    #- assets/vallis/3/
+    #- assets/vallis/4/
