cards: use new small widgets

--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,4 @@ lib/resources/notifications.dart
 android/key.properties
 android/app/google-services.json
 assets/voidTrader.json
-assets/worldstate.json
+assets/ghoulpurge.json
