--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,11 @@
 .dart_tool/
 .packages
 .pub/
-build/
 .flutter-plugins
 .idea
 .vscode
+
+build/
 pubspec.lock
 assets/svg/
 lib/utils/keys.dart
@@ -14,3 +15,4 @@ android/key.properties
 android/app/google-services.json
 assets/voidTrader.json
 assets/ghoulpurge.json
+assets/persistentEnemies.json
