--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,12 +13,11 @@ dependencies:
   flutter_sequence_animation: ^3.0.1
   flutter_map: ^0.4.0
   flutter_svg: ^0.7.0+1
-  sentry: ^2.2.0
   chewie: ^0.8.0
   cached_network_image: ^0.5.1
-  package_info: ^0.3.2
-  device_info: ^0.3.0
   background_fetch: ^0.1.1
+  flutter_crashlytics:
+    path: flutter_crashlytics/
 
 dev_dependencies:
   flutter_test:
