--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ android/app/google-services.json
 assets/voidTrader.json
 assets/ghoulpurge.json
 assets/persistentEnemies.json
+assets/events.json
