--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,17 +2,20 @@ name: navis
 description: Cephalon Navis is an Android app inspired by Warframe Hub.
 version: 1.1.0+7
 
+environment:
+  sdk: ">=2.1.0 <3.0.0"
+
 dependencies:
   flutter:
     sdk: flutter
   background_fetch: ^0.1.1
-  bloc: ^0.9.0
+  bloc: ^0.9.3
   chewie: ^0.9.5
   codable: ^1.0.0
   equatable: ^0.2.0
   firebase_messaging: ^3.0.1
   flutter_advanced_networkimage: ^0.4.8
-  flutter_bloc: ^0.6.0
+  flutter_bloc: ^0.6.3
   flutter_crashlytics: ^0.2.1
   flutter_custom_tabs: ^0.4.0
   flutter_map: ^0.4.0
@@ -20,15 +23,21 @@ dependencies:
   flutter_svg: ^0.10.2
   flutter_youtube: ^1.1.4
   intl: ^0.15.7
-  rxdart: ^0.20.0
   shared_preferences: ^0.5.1+1
   sticky_headers: ^0.1.7
+  dots_indicator: ^0.0.4
+  flutter_villains: ^1.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_driver:
+    sdk: flutter
   test: ^1.5.3
   mockito: ^4.0.0
+
+dependency_overrides:
+  test_api: 0.2.2
 
 flutter:
   uses-material-design: true
