--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,32 +12,28 @@ dependencies:
   bloc: ^0.9.3
   chewie: ^0.9.5
   codable: ^1.0.0
+  dots_indicator: ^0.0.4
   equatable: ^0.2.0
   firebase_messaging: ^3.0.1
-  flutter_advanced_networkimage: ^0.4.8
+  cached_network_image: ^0.6.1
   flutter_bloc: ^0.6.3
   flutter_crashlytics: ^0.2.1
-  flutter_custom_tabs: ^0.4.0
+  flutter_custom_tabs: ^0.5.0
   flutter_map: ^0.4.0
   flutter_material_color_picker: ^0.0.5
-  flutter_svg: ^0.10.2
-  flutter_youtube: ^1.1.4
+  flutter_svg: ^0.10.4
+  flutter_villains: ^1.2.0
   intl: ^0.15.7
   shared_preferences: ^0.5.1+1
   sticky_headers: ^0.1.7
-  dots_indicator: ^0.0.4
-  flutter_villains: ^1.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_driver:
     sdk: flutter
-  test: ^1.5.3
+  test: ^1.5.1
   mockito: ^4.0.0
-
-#dependency_overrides:
-# test_api: 0.2.2
 
 flutter:
   uses-material-design: true
@@ -48,6 +44,9 @@ flutter:
     - family: VoidTear
       fonts:
         - asset: assets/general/VoidTear.ttf
+    - family: PriceTag
+      fonts:
+        - asset: assets/general/PriceTag.ttf
   assets:
     #- assets/acolytes/
     - assets/general/
@@ -55,7 +54,6 @@ flutter:
     - assets/factions/
     - assets/sigils/
     - assets/relics/
-    #- assets/worldstate.json
     #Plains of Eidolon map tiles
     #- assets/plains/0/
     #- assets/plains/1/
