--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: navis
 description: Cephalon Navis is an Android app inspired by Warframe Hub.
-version: 1.1.3+10
+version: 1.1.4+11
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -18,13 +18,16 @@ dependencies:
   flutter_bloc: ^0.6.3
   flutter_crashlytics: ^0.2.1
   flutter_custom_tabs: ^0.5.0
+  flutter_local_notifications: ^0.5.2
   flutter_map: ^0.4.0
   flutter_material_color_picker: ^0.0.5
   #flutter_svg: ^0.10.4
   flutter_villains: ^1.2.0
   intl: ^0.15.7
   package_info: ^0.4.0+1
+  path_provider: ^0.5.0+1
   shared_preferences: ^0.5.1+1
+  sqflite: ^1.1.3
   sticky_headers: ^0.1.7
 
 dev_dependencies:
@@ -50,3 +53,4 @@ flutter:
     - assets/factions/
     - assets/sigils/
     - assets/relics/
+  #- assets/settings.db
