app: Avoid UnsatisfiedLinkError entirely

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -65,7 +65,9 @@ android {
     buildTypes {
         release {
             signingConfig signingConfigs.release
-            
+            ndk {
+                abiFilters 'armeabi-v7a'
+            }
         }
     }
 }
