--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: navis
 description: Cephalon Navis is an Android app inspired by Warframe Hub.
-version: 1.1.5+12
+version: 1.1.6+16
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -9,14 +9,14 @@ dependencies:
   flutter:
     sdk: flutter
   background_fetch: ^0.2.0
-  bloc: ^0.9.5
+  bloc: ^0.11.0
   chewie: ^0.9.5
   codable: ^1.0.0
   dots_indicator: ^0.0.4
   equatable: ^0.2.0
-  flutter_advanced_networkimage: ^0.4.13
-  flutter_bloc: ^0.6.3
-  flutter_crashlytics: ^0.2.1
+  flutter_advanced_networkimage: ^0.4.15
+  flutter_bloc: ^0.9.0
+  firebase_crashlytics: ^0.0.2
   flutter_custom_tabs: ^0.5.0
   flutter_local_notifications: ^0.5.2
   flutter_map: ^0.4.0
@@ -25,7 +25,7 @@ dependencies:
   flutter_villains: ^1.2.0
   intl: ^0.15.7
   package_info: ^0.4.0+1
-  shared_preferences: ^0.5.1+1
+  shared_preferences: ^0.5.1+2
   sqflite: ^1.1.3
   sticky_headers: ^0.1.7
 
