--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,20 +1,20 @@
 name: navis
 description: Cephalon Navis is an Android app inspired by Warframe Hub.
-version: 1.1.6+13
+version: 1.1.7+14
 
 dependencies:
   flutter:
     sdk: flutter
   background_fetch: ^0.2.0
-  bloc: ^0.11.0
+  bloc: ^0.11.1
   chewie: ^0.9.5
   codable: ^1.0.0
   dots_indicator: ^0.0.4
   equatable: ^0.2.0
   flutter_advanced_networkimage: ^0.4.15
-  flutter_bloc: ^0.9.0
-  firebase_crashlytics: ^0.0.2
-  flutter_custom_tabs: ^0.5.0
+  flutter_bloc: ^0.9.1
+  firebase_crashlytics: ^0.0.4+1
+  flutter_custom_tabs: ^0.6.0
   flutter_local_notifications: ^0.5.2
   flutter_map: ^0.4.0
   flutter_material_color_picker: ^0.0.5
@@ -23,7 +23,6 @@ dependencies:
   intl: ^0.15.7
   package_info: ^0.4.0+1
   shared_preferences: ^0.5.1+2
-  sqflite: ^1.1.3
   sticky_headers: ^0.1.7
 
 dev_dependencies:
