--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -62,10 +62,11 @@ android {
 
     buildTypes {
         release {
-            signingConfig signingConfigs.release
             ndk {
-                abiFilters 'armeabi-v7a'
+                abiFilters 'armeabi-v7a', 'x86' ,'arm64-v8a'
             }
+            
+            signingConfig signingConfigs.release 
         }
     }
 }
