background_fetch: oops

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
 
     <application
         tools:replace="android:label"
-        android:name="io.flutter.app.FlutterApplication"
+        android:name=".Application"
         android:icon='@mipmap/ic_launcher'
         android:label="Navis">
         <activity
