--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,11 +19,11 @@ dependencies:
   package_info: ^0.4.0+3
   shared_preferences: ^0.5.1+2
   sticky_headers: ^0.1.7
-  flutter_local_notifications: ^0.7.0
   firebase_messaging: ^4.0.0+4
   cached_network_image: ^0.8.0
   flutter_svg: ^0.12.4
-  simple_animations: ^1.2.0
+  simple_animations: ^1.3.0
+  get_it: ^1.0.3
 
 dependency_overrides:
     cached_network_image: ^0.8.0
@@ -42,9 +42,6 @@ flutter:
     - family: Standing
       fonts:
         - asset: assets/general/Standing.ttf
-    - family: VoidTear
-      fonts:
-        - asset: assets/general/VoidTear.ttf
   assets:
     - assets/general/
     - assets/platforms/
