pubspec: removed unneed deps and updated others

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,13 +3,14 @@
     package="com.cephalon.navis">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         tools:replace="android:label"
-        android:name=".Application"
+        android:name="io.flutter.app.FlutterApplication"
         android:icon='@mipmap/ic_launcher'
         android:label="Navis">
         <activity
@@ -31,10 +32,5 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-
-        <service
-            android:exported="false"
-            android:name="io.gjg.androidjobscheduler.AndroidJobScheduler"
-            android:permission="android.permission.BIND_JOB_SERVICE" />
     </application>
 </manifest>
