--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,32 +1,30 @@
 name: navis
 description: Cephalon Navis is an Android app inspired by Warframe Hub.
-version: 1.1.12+20
+version: 1.2.0+21
 
 dependencies:
   flutter:
     sdk: flutter
-  background_fetch: ^0.2.0
-  bloc: ^0.13.0
+  bloc: ^0.14.1
   chewie: ^0.9.5
   codable: ^1.0.0
-  equatable: ^0.2.0
-  flutter_bloc: ^0.13.0
+  equatable: ^0.2.5
+  firebase_lumberdash: ^1.0.1
+  flutter_bloc: ^0.15.0
   firebase_crashlytics: ^0.0.4+3
   flutter_custom_tabs: ^0.6.0
-  flutter_map: ^0.5.0+1
+  flutter_map: ^0.5.3+1
   flutter_material_color_picker: ^0.0.5
   intl: ^0.15.7
+  lumberdash: ^1.0.3
   package_info: ^0.4.0+3
   shared_preferences: ^0.5.1+2
   sticky_headers: ^0.1.7
-  firebase_messaging: ^4.0.0+4
+  firebase_messaging: ^5.0.1+1
   cached_network_image: ^0.8.0
   flutter_svg: ^0.12.4
   simple_animations: ^1.3.0
   get_it: ^1.0.3
-
-dependency_overrides:
-    cached_network_image: ^0.8.0
 
 dev_dependencies:
   flutter_test:
