--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   flutter_bloc: ^0.15.0
   firebase_crashlytics: ^0.0.4+3
   flutter_custom_tabs: ^0.6.0
-  flutter_map: ^0.5.3+1
+  #flutter_map: ^0.5.3+1
   flutter_material_color_picker: ^0.0.5
   intl: ^0.15.7
   lumberdash: ^1.0.3
@@ -22,7 +22,7 @@ dependencies:
   sticky_headers: ^0.1.7
   firebase_messaging: ^5.0.1+1
   cached_network_image: ^0.8.0
-  flutter_svg: ^0.12.4
+  flutter_svg: ^0.13.0+1
   simple_animations: ^1.3.0
   get_it: ^1.0.3
 
