--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,26 +5,26 @@ version: 1.2.0+21
 dependencies:
   flutter:
     sdk: flutter
-  bloc: ^0.14.1
-  chewie: ^0.9.5
+  bloc: ^0.14.2
+  chewie: ^0.9.7
   codable: ^1.0.0
   equatable: ^0.2.5
   firebase_lumberdash: ^1.0.1
-  flutter_bloc: ^0.15.0
-  firebase_crashlytics: ^0.0.4+3
+  flutter_bloc: ^0.15.1
+  firebase_crashlytics: ^0.0.4+4
   flutter_custom_tabs: ^0.6.0
   #flutter_map: ^0.5.3+1
-  flutter_material_color_picker: ^0.0.5
-  intl: ^0.15.7
+  intl: ^0.15.8
   lumberdash: ^1.0.3
-  package_info: ^0.4.0+3
+  package_info: ^0.4.0+4
   shared_preferences: ^0.5.2+2
   sticky_headers: ^0.1.7
-  firebase_messaging: ^5.0.1+1
+  firebase_messaging: ^5.0.2
   cached_network_image: ^0.8.0
-  flutter_svg: ^0.13.0+1
+  flutter_svg: ^0.13.0+2
   simple_animations: ^1.3.0
   get_it: ^1.0.3
+  outline_material_icons: ^0.1.0
 
 dev_dependencies:
   flutter_test:
@@ -40,11 +40,18 @@ flutter:
     - family: Standing
       fonts:
         - asset: assets/general/Standing.ttf
+    - family: Sortie
+      fonts:
+        - asset: assets/general/Sortie.ttf
+    - family: VoidFissure
+      fonts:
+        - asset: assets/general/VoidFissure.ttf        
   assets:
     - assets/general/
     - assets/platforms/
     - assets/factions/
     - assets/sigils/
     - assets/relics/
-    - assets/maps/
-    - assets/maps/imgs/
+    - assets/skyboxes/
+    #- assets/maps/
+    #- assets/maps/imgs/
