--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,10 @@ matrix:
           - platform-tools
           - build-tools-28.0.3
           - android-28
+          - sys-img-armeabi-v7a-google_apis-28
+          - extra-android-m2repository
+          - extra-google-m2repository
+          - extra-google-android-support
       jdk: oraclejdk8
       sudo: false
       addons:
@@ -23,10 +27,26 @@ matrix:
             - libstdc++6
             - fonts-droid
       before_script:
+        - wget http://services.gradle.org/distributions/gradle-5.4.1-bin.zip
+        - unzip -qq gradle-5.4.1-bin.zip
+        - export GRADLE_HOME=$PWD/gradle-5.4.1
+        - export PATH=$GRADLE_HOME/bin:$PATH
         - git clone https://github.com/flutter/flutter.git -b beta
       script:
-        - ./flutter/bin/flutter build apk --debug
-        
+        - ./flutter/bin/flutter -v build apk
+    # Gonna keep this for later
+    # - os: osx
+    #   language: generic
+    #   osx_image: xcode8.3
+    #   before_script:
+    #     - pip install six
+    #     - brew update
+    #     - brew install --HEAD libimobiledevice
+    #     - brew install ideviceinstaller
+    #     - brew install ios-deploy
+    #     - git clone https://github.com/flutter/flutter.git -b alpha --depth 1
+    #   script:
+    #     - ./flutter/bin/flutter -v build ios --no-codesign
 
 cache:
   directories:
