--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,8 @@ android:
   - build-tools-28.0.3
   - android-28
 before_script:
-- openssl aes-256-cbc -K $encrypted_2db283701f8c_key -iv $encrypted_2db283701f8c_iv -in secrets.tar.enc -out secrets.tar -d
+- openssl aes-256-cbc -K $encrypted_2db283701f8c_key -iv $encrypted_2db283701f8c_iv 
+  -in secrets.tar.enc -out secrets.tar -d
 - tar xvf secrets.tar
 - git clone https://github.com/flutter/flutter.git -b beta
 - export PATH=./flutter/bin:$PATH
