--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,6 @@ matrix:
   allow_failures:
     - env: JOB=test-ipa-long-shot
   include:
-    - env: JOB=flutter-test
-      language: dart
-      before_script:
-         - git clone https://github.com/flutter/flutter.git -b beta
-         - export PATH=./flutter/bin:$PATH
-      script:
-        - flutter test --verbose 
-
     - env: JOB=test-apk
       language: android
       jdk: oraclejdk8 # Android sdkmanager doesn't support jdk 9+
@@ -29,7 +21,8 @@ matrix:
         - export PATH=./flutter/bin:$PATH
       script:
         - flutter pub get
-        - flutter build apk
+        - flutter test 
+        - flutter build apk --verbose
 
     - env: JOB=test-ipa-long-shot
       language: objective-c
