--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -62,7 +62,7 @@ android {
 
     buildTypes {
         release {
-            versionNameSuffix "-${getDate()}"
+            versionNameSuffix ".${getDate()}"
             signingConfig signingConfigs.release
         }
     }
