add versionNameSuffix for debug builds

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -66,6 +66,11 @@ android {
     }
 
     buildTypes {
+        debug {
+            versionNameSuffix "${getDate()}-debug"
+            signingConfig signingConfigs.debug
+        }
+
         release {
             versionNameSuffix "${getDate()}"
             signingConfig signingConfigs.release
