--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ matrix:
         - flutter pub get
         - flutter test 
         - flutter build apk --verbose
-       #- cd android && bundle exec fastlane deploy_internal
+        - cd android && bundle exec fastlane android deploy_internal
         
     # I just needed to know what was missing from 
     # - env: JOB=test-ipa-long-shot
