--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -52,7 +52,7 @@ android {
         minSdkVersion 16
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
-        versionName flutterVersionName
+        versionName flutterVersionName + getDate()
         testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
     }
 
@@ -67,12 +67,11 @@ android {
 
     buildTypes {
         debug {
-            versionNameSuffix "${getDate()}-debug"
+            versionNameSuffix "-debug"
             signingConfig signingConfigs.debug
         }
 
         release {
-            versionNameSuffix "${getDate()}"
             signingConfig signingConfigs.release
         }
     }
